# liquidhaskell

./: .gitmodules  cabal.project  cabal.project.freeze  liquidhaskell.cabal  stack.yaml
.circleci/: config.yml
liquid-prelude/src/: KMeansHelper.hs
liquid-prelude/src/Language/Haskell/Liquid/: Bag.hs  Equational.hs  Prelude.hs  ProofCombinators.hs  RTick.hs
liquid-prelude/src/Language/Haskell/Liquid/RTick/: Combinators.hs
src/Language/Haskell/Liquid/: Bare.hs
src/Language/Haskell/Liquid/Bare/: DataType.hs  Expand.hs  Measure.hs  Resolve.hs  Types.hs
src/Language/Haskell/Liquid/GHC/: Interface.hs
src/Language/Haskell/Liquid/Transforms/: CoreToLogic.hs
src/Language/Haskell/Liquid/Types/: RefType.hs  Specs.hs
tests/: Parser.hs  Synthesis.hs  Test.hs  cabal.project  test.hs  tests.cabal
tests/DependentHaskell/todo/: LF326.hs  TypeFamilies.hs
tests/absref/neg/: Deppair0.hs  Deptup0.hs  DeptupW.hs  ListISort.hs  ListISort_LType.hs  ListQSort.hs
tests/absref/pos/: Deppair0.hs  Deppair2.hs  Deptup0.hs  DeptupW.hs  ListISort.hs  ListISort_LType.hs  ListQSort.hs
tests/basic/pos/: DuplicateRecordFields00.hs  Infer00.hs
tests/benchmarks/stitch-lh/: .#stitch-lh.cabal
tests/benchmarks/stitch-lh/main/: Main.hs
tests/benchmarks/stitch-lh/src/Language/Stitch/LH/: CSE.hs
tests/benchmarks/stitch-lh/tests/Tests/.liquid-old/: Check.hs.err
tests/benchmarks/text-0.11.2.3/Data/Text/Lazy/Builder/RealFloat/: Functions.hs
tests/classes/pos/: Inst00.hs  TypeEquality01.hs
tests/datacon/pos/: AutoliftedFields000.hs  T1446.hs  T1473A.hs  T1473B.hs  T1476.hs
tests/errors/: CyclicExprAlias0.hs  CyclicExprAlias1.hs  CyclicExprAlias2.hs  CyclicExprAlias3.hs  CyclicPredAlias0.hs  CyclicPredAlias1.hs  CyclicPredAlias2.hs  CyclicPredAlias3.hs  CyclicTypeAlias0.hs  CyclicTypeAlias1.hs  CyclicTypeAlias2.hs  CyclicTypeAlias3.hs  DupAlias.hs  ExportMeasure0.hs  ExportReflect0.hs  TODOUnboundAbsRef.hs  UnboundFunInSpec.hs
tests/golden/: Json_output.hs
tests/gradual/neg/: Gradual.hs  Interpretations.hs  Intro.hs
tests/gradual/pos/: Dynamic.hs  Gradual.hs  Interpretations.hs
tests/harness/: Driver_cabal.hs  Driver_stack.hs
tests/harness/Test/: Build.hs  Groups.hs  Options.hs  Parse.hs  Summary.hs  Types.hs
tests/import/client/: Client0.hs  Client1.hs  Client2.hs  LiquidArrayInit.hs  LiquidArrayNullTerm.hs  ReExportClient.hs  T1180.hs
tests/import/lib/: FunClashLib.hs  FunClashLibLib.hs  LibBlue.hs  LibRed.hs  NameClashLib.hs  ReExport.hs  ReflectLib8.hs  Spec.hs  T1102_LibY.hs  T1104Lib.hs  WrapLib.hs  WrapLibCode.hs
tests/measure/pos/: Len02.hs
tests/names/neg/: Assume00.hs  Set00.hs  Set01.hs  Set02.hs  Vector0.hs
tests/names/pos/: ClojurVector.hs  LocalSpec.hs  Uniques.hs
tests/neg/: Alias00.hs  Ass0.hs  Class1.hs  Class2.hs  Concat1.hs  Concat2.hs  ConstraintsAppend.hs  Contra0.hs  Csv.hs  Datacon_eq.hs  Elim000.hs  Elim_ex_compose.hs  Elim_ex_let.hs  Elim_ex_list.hs  Elim_ex_map_1.hs  Elim_ex_map_2.hs  Elim_ex_map_3.hs  Errorloc.hs  Eval.hs  Ex0_unsafe.hs  Ex1_unsafe.hs  FoldN.hs  GeneralizedTermination.hs  Grty0.hs  Grty1.hs  Grty2.hs  Grty3.hs  LazyWhere.hs  LazyWhere1.hs  LetRecStack.hs  List00.hs  ListConcat.hs  ListElem.hs  ListKeys.hs  ListMSort.hs  LocalSpec.hs  Mapreduce.hs  Mapreduce_tiny.hs  Meas0.hs  Meas2.hs  (+49 more)
tests/pattern/pos/: ANF.hs  Contra0.hs  Invariants.hs  Monad7.hs
tests/ple/neg/: BinahUpdateLib1.hs
tests/ple/pos/: T1302b.hs
tests/pos/: AVL.hs  AVLRJ.hs  Abs.hs  Absref_crash0.hs  Adt0.hs  Alias00.hs  Alias01.hs  Alphaconvert_List.hs  Alphaconvert_Set.hs  Anfbug.hs  Anftest.hs  Anish1.hs  BST.hs  BinarySearch.hs  Class.hs  Class2.hs  ClojurVector.hs  Cmptag0.hs  Compare.hs  Compare1.hs  Compare2.hs  ComprehensionTerm.hs  ConstraintsAppend.hs  CountMonad.hs  Cut00.hs  DB00.hs  Data2.hs  DataConQuals.hs  Datacon0.hs  Datacon1.hs  Deepmeas0.hs  DepTriples.hs  Deptup.hs  Deptup1.hs  Deptup3.hs  DeptupW.hs  Div000.hs  Elim01.hs  Elim_ex_compose.hs  Elim_ex_let.hs  (+184 more)
tests/refined-classes/: Semigroup_desugared.hs  Semigroup_unsound.hs
tests/strings/neg/: StringIndexingStep1.hs
tests/strings/pos/: DivideAndQunquer.hs  Proves.hs  StringIndexing.hs  StringIndexingStep1.hs  StringIndexingStep2.hs  StringIndexingStep3.hs
tests/strings/todo/: Boyer_Moore.hs
tests/synthesis/static/: BinHeapSingleton.hs  Data.hs  ListNull.hs  ListZip.hs  ListZipWith.hs  Map.hs  Stutter.hs  TreeOne.hs  TupleListSimple.hs
tests/synthesis/tests/: BinHeapSingleton.hs  Data.hs  ListZip.hs  ListZipWith.hs  Map.hs  TreeOne.hs
tests/tmp/: Class2.hs  LiquidR.hs  LiquidR2.hs  T776.hs  T777.hs
tests/todo/: AA.hs  AVLTree.hs  AbsRef.hs  AbsRefNameClash.hs  Absref_crash0.hs  AliasConst.hs  AliasError.hs  Aliases.hs  AppCheck.hs  Append0.hs  ApplicativeMaybe0.hs  ApplicativeMaybe1.hs  Apply.hs  Ast.hs  AxiomBug.hs  Baderror.hs  Baffled.hs  Binsearch.hs  Boolparse.hs  Box.hs  Braun.hs  Cases.hs  CatMaybes.hs  CheckProofs.hs  Class1.hs  Class2.hs  Class4.hs  ClassMeasureBAD.hs  ClassMeasureIdeal.hs  ClassMeasureOK.hs  ClassReflect.hs  CmpBug.hs  Cont.hs  Contra.hs  CountMonadMap.hs  DB0.hs  DBMovies0.hs  Decr.hs  DerivingRead.hs  DoubleError.hs  (+131 more)
tests/todo-rebare/: DataKinds.hs  Inst01_UNSAFE.hs  NatClass.hs  T1089b.hs  VerifiedMonoid_NEG.hs  VerifiedMonoid_POS.hs
