cabal-version:      2.4
name:               tests
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Walker
maintainer:         matt.g.d.walker@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tests
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
          Abs
        , Absref_crash0
        , Absref_crash
        , Ackermann
        , Adt0
        , AdtList0
        , AdtList1
        , AdtList2
        , AdtList3
        , AdtList4
        , AdtList5
        , AdtPeano0
        , AdtPeano1
        , Alias00
        , Alias01
        , Alphaconvert_List
        , Alphaconvert_Set
        , AmortizedQueue
        , Anfbug
        , Anftest
        , Anish1
        , AssumedRecursive
        , Assume
        , Automate
        , AutoSize
        , AutoTerm1
        , AutoTerm
        , Avg
        , AVL
        , AVLRJ
        , Bag1
        , BangPatterns
        , BinarySearch
        , BinarySearchOverflow
        , Books
        , Bool0
        , Bool1
        , Bool2
        , Bounds1
        , BST000
        , BST
        , Case_lambda_join
        , CasesToLogic
        , Cat
        , CharLiterals
        , CheckedNum
        , Chunks
        , Class2
        , Class
        , ClassReg
        , Client521
        , ClojurVector
        , Cmptag0
        , Coercion
        , Comma
        , CommentedOut
        , Compare1
        , Compare2
        , CompareConstraints
        , Compare
        , Comprehension
        , ComprehensionTerm
        , ConstraintsAppend
        , Constraints
        , Coretologic
        , CountMonad
        , Csgordon_issue_296
        , Cut00
        , Data2
        , DataBase
        , Datacon0
        , Datacon1
        , Datacon_inv
        , DataConQuals
        , DB00
        , Deepmeas0
        , DepData
        , DependentPairsFun
        , DependentPairs
        , DepTriples
        , Deptup1
        , Deptup3
        , Deptup
        , DeptupW
        , Div000
        , Dropwhile
        , Duplicate_bind
        , Elements
        , Elems
        , Elim00
        , Elim01
        , Elim_ex_compose
        , Elim_ex_let
        , Elim_ex_list
        , Elim_ex_map_1
        , Elim_ex_map_2
        , Elim_ex_map_3
        , Eqelems
        , Eq_poly_measure
        , Eval
        , EvalQuery
        , Even0
        , Even
        , Ex01
        , Ex0
        , Ex1
        , ExactADT6
        , ExactGADT0
        , ExactGADT1
        , ExactGADT2
        , ExactGADT6
        , ExactGADT
        , Exp0
        , Extype
        , Fail
        , FailName
        , FFI
        , Fib0
        , FibEq
        , FilterAbs
        , FingerTree
        , Foldl
        , FoldN
        , Foldr
        , Foo
        , For
        , Forloop
        , Fractional
        , FractionalInstance
        , GadtEval
        , GCD
        , GeneralizedTermination
        , GhcSort1
        , GhcSort2
        , GhcSort3
        , GhcSort3_T
        , Gimme
        , Go
        , GoodHMeas
        , Go_ugly_type
        , Graph
        , Grty0
        , Grty1
        , Grty2
        , Grty3
        , GuardedNegative
        , HasElem
        , HaskellMeasure
        , HedgeUnion
        , Hello
        , Hex00
        , HigherOrderRecFun
        , Hole00
        , Hole_app
        , Hole_fun
        , Holes
        , Holes_Slicing
        , Hutton
        , IcfpDemo
        , IdNat0
        , IdNat
        , Ignores
        , Imp0
        , Implies
        , Infinity
        , Infix
        , Inline1
        , Inline
        , Invlhs
        , Ite1
        , Ite
        , Jeff
        , Keys
        , Kmp
        , KmpIO
        , KmpVec
        , LambdaDeBruijn
        , LambdaEval
        , LambdaEvalMini
        , LambdaEvalSuperTiny
        , LambdaEvalTiny
        , LazyWhere1
        , LazyWhere
        , Lets
        , Lex
        , Lib521
        , ListAnf
        , ListConcat
        , ListElem
        , ListISort_bag
        , ListISort_perm
        , ListKeys
        , ListLen
        , ListLen_LType
        , ListMSort
        , ListMSort_LType
        , ListQSort_LType
        , Listqual
        , ListRange
        , ListRange_LType
        , ListReverse_LType
        , ListSetDemo
        , ListSet
        , ListSort
        , Lit00
        , Lit02
        , Lit
        , LocalHole
        , LocalLazy
        , LocalSpec
        , LocalSpecLib
        , LogicCurry1
        , Loo
        , LooLib
        , LooLibLib
        , Malformed0
        , Map0
        , Map2
        , MapFusion
        , Map
        , Mapreduce_bare
        , MapReduceVerified
        , Maps1
        , Maps
        , MapTvCrash
        , MaskError
        , Maybe000
        , Maybe0
        , Maybe1
        , Maybe2
        , Maybe3
        , Maybe4
        , Maybe5
        , Maybe
        , Meas00a
        , Meas00
        , Meas0a
        , Meas0
        , Meas10
        , Meas11
        , Meas1
        , Meas2
        , Meas4
        , Meas5
        , Meas6
        , Meas7
        , Meas8
        , Meas9
        , MeasureContains
        , MeasureDups
        , Measures1
        , MeasureSets
        , Measures
        , Merge1
        , MergeSort_bag
        , MergeSort
        , Mod
        , ModLib
        , ModTest
        , Monad2
        , Monad5
        , Monad6
        , Multi_pred_app_00
        , Mutrec
        , MutuallyDependentADT
        , MutualRec
        , Nats
        , Niki1
        , Niki
        , NoCaseExpand
        , NoExhaustiveGuardsError
        , NoPositivityCheck
        , Null
        , OrdList
        , ORM
        , Pair00
        , Pair0
        , Pair
        , PairMeasure0
        , PairMeasure
        , Pargs1
        , Pargs
        , Partialmeasure
        , Partial_tycon
        , Permutation
        , PersistentVector
        , Ple1
        , PointDist
        , Poly0
        , Poly1
        , Poly2_degenerate
        , Poly2
        , Poly3a
        , Poly3
        , Poly4
        , Polyfun
        , Polyqual
        , PositivityCheck
        , Poslist_dc
        , Poslist
        , Pragma0
        , Pred
        , PrimInt0
        , Product
        , Profcrasher
        , PromotedDataCons
        , Propability
        , Propmeasure1
        , Propmeasure
        , QQTySig
        , QQTySigTyVars
        , QQTySyn
        , QualTest
        , Range1
        , RangeAdt
        , Range
        , RBTree_col_height
        , RBTree_color
        , RBTree_height
        , RBTree
        , RBTree_ord
        , RealProps
        , Rebind
        , Rec_annot_go
        , Record0
        , Record1
        , RecordSelectorError
        , RecQSort0
        , RecQSort
        , RecSelector
        , Recursion0
        , Reduction
        , RefinedADTs
        , Reflect0
        , ReflectAlias
        , ReflectBooleanFunctions
        , ReflectMutual
        , RelativeComplete
        , RepeatHigherOrder
        , Repeat
        , ResolveA
        , ResolveB
        , Resolve
        , ResolvePred
        , Rest
        , ReWrite10
        , ReWrite2
        , ReWrite3
        , ReWrite4
        , ReWrite5
        , ReWrite6
        , ReWrite7
        , ReWrite8
        , ReWrite9
        , ReWrite
        , Risers
        , Rta
        , SafePartialFunctions
        , Scanr
        , SelfList
        , SimplerNotation
        , SimplifyTup00
        , SingletonLists
        , Solver
        , Spec0
        , StackClass
        , StackMachine
        , Stacks0
        , State00
        , StateConstraints00
        , StateConstraints0
        , StateConstraints
        , StateF00
        , State
        , StateInvarint
        , StateLib
        , Streams
        , StrictPair0
        , StrictPair1
        , String00
        , StringLit
        , Strings
        , StructRec
        , Sum
        , T1013A
        , T1013
        , T1024
        , T1025a
        , T1025
        , T1034
        , T1045a
        , T1045
        , T1060
        , T1065
        , T1074
        , T1085
        , T1092
        , T1095A
        , T1095B
        , T1095C
        , T1100
        , T1120A
        , T1126a
        , T1126
        , T1198_1
        , T1198_2
        , T1198_3
        , T1198_4
        , T1220
        , T1223
        , T1267
        , T1278_2
        , T1278_3
        , T1278
        , T1286
        , T1288
        , T1289a
        , T1302
        , T1336
        , T1363
        , T1461
        , T1498
        , T1543
        , T1544
        , T1547
        , T1548
        , T1550
        , T1555
        , T1556
        , T1560B
        , T1560
        , T1567
        , T1568
        , T1571
        , T1577
        , T1593
        , T1595
        , T1597
        , T1603
        , T1633
        , T1634
        , T1636
        , T1642A
        , T1642
        , T1647
        , T1649MeasuresDef
        , T1649WorkTypes
        , T1657
        , T1660
        , T1669
        , T1670A
        , T1670B
        , T1697A
        , T1697C
        , T1697
        , T1709
        , T1749
        , T1761
        , T1775
        , T1812
        , T1874
        , T385
        , T531
        , T595a
        , T595
        , T598
        , T716
        , T819A
        , T819
        , T820
        , T866
        , T914
        , TagBinder
        , Take
        , Term0
        , Term
        , Termination
        , TerminationNum0
        , TerminationNum
        , Test000
        , Test00b
        , Test00c
        , Test00
        , Test00_int
        , Test00_old
        , Test0
        , Test1
        , Test2
        , Test761
        , TestRec
        , TokenType
        , Top0
        , TopLevel
        , ToyMVar
        , Trans
        , Transpose
        , TransTAG
        , Tup0
        , Tupparse
        , Tyclass0
        , TyExpr
        , Tyfam0
        , TypeAlias
        , TypeLitNat
        , TypeLitString
        , Tyvar
        , UnboxedTuplesAndTH
        , UnboxedTuples
        , Unusedtyvars
        , Variance2
        , Variance
        , Vector00
        , Vector1a
        , Vector1b
        , Vector1
        , Vector2
        , VerifiedNum
        , WBL0
        , WBL
        , WhyLH
        , Words1
        , Words
        , Wrap0
        , Wrap1
        , WrapUnWrap
        , Zipper000
        , Zipper0
        , Zipper
        , ZipSO
        , ZipW1
        , ZipW2
        , ZipW

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -fplugin=LiquidHaskell -ddump-timings -ddump-to-file -fkeep-going
    build-depends:    liquid-base
                    , liquid-prelude
                    , liquid-containers
                    , liquid-vector
                    , liquidhaskell
    hs-source-dirs:   app
                    , pos
    default-language: Haskell2010
